src/objects/HWS_ServiceFee_Discount__c.object
<CustomObject>
    <fields>
        <fullName>HWS_AssuranceManagerEmail__c</fullName>
        <formula>HWS_Service_Assurance_Manager__r.Email</formula>
        <label>Escalation Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Business_unit__c</fullName>
        <formula>TEXT(HWS_Service_Contract_Line_Item__r.PricebookEntry.Product2.Family)</formula>
        <label>Business unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_CaresAgreementUniqueId__c</fullName>
        <formula>HWS_Cares_Service_Agreement_Number__c + &apos;_&apos; +&apos;Li_&apos; + HWS_Cares_Line_Item_Number__c</formula>
        <label>Cares Agreement Unique Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Cares_Line_Item_Number__c</fullName>
        <formula>HWS_Service_Contract_Line_Item__r.CH_CARES_LineItem__c</formula>
        <label>CARES Line Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Cares_Service_Agreement_Number__c</fullName>
        <formula>HWS_Service_Contract__r.CH_CARES_ServiceAgreement__c</formula>
        <label>CARES Service Agreement Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Customer_Contact_2_Email__c</fullName>
        <description>This is Created as a Part of  HWSDDP-128.</description>
        <formula>HWS_Customer_Contact_2__r.Email</formula>
        <label>Customer Contact 2 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Customer_Contact_2_Name__c</fullName>
        <description>This is Created as a Part of HWSDDP-128.</description>
        <formula>HWS_Customer_Contact_2__r.LastName</formula>
        <label>Customer Contact 2 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Customer_Contact_2_Phone__c</fullName>
        <description>This is Created as a Part of HWSDDP-128.</description>
        <formula>HWS_Customer_Contact_2__r.Phone</formula>
        <label>Customer Contact 2 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Customer_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is Created as a Part of HWSDDP-128.</description>
        <label>Customer Contact 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Fee Discounts (Customer Contact 1)</relationshipLabel>
        <relationshipName>HWS_Service_Fee_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HWS_Damaged_HW_RepairDiscount2__c</fullName>
        <label>Damaged HW Repair Discount2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HWS_Damaged_HW_RepairDiscount__c</fullName>
        <label>Damaged HW Repair Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HWS_Damaged_HW_ReplacementDiscount__c</fullName>
        <label>Damaged HW Replacement Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HWS_Discount3__c</fullName>
        <label>HWS Discount3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HWS_Discount4__c</fullName>
        <label>HWS Discount4</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HWS_Documentation_Discount__c</fullName>
        <label>Documentation Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HWS_Email_Template__c</fullName>
        <description>This is Created as a Part of HWSDDP-128.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Template</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HWS_HW_AssessmentDiscount__c</fullName>
        <label>HW Assessment Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HWS_HW_ReplacementDiscount__c</fullName>
        <label>HW Replacement Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HWS_LineItemDiscountUniqueId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>LineItemDiscountUniqueId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HWS_LineItemProductCode__c</fullName>
        <formula>HWS_Service_Contract_Line_Item__r.Asset.Product2.ProductCode</formula>
        <label>Line Item Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_LineItemProductName__c</fullName>
        <formula>HWS_Service_Contract_Line_Item__r.Asset.Product2.Name</formula>
        <label>Line Item Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Minimal_Quote_Price__c</fullName>
        <label>Minimal Quote Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HWS_Nokia_Email__c</fullName>
        <description>This is Created as a Part of HWSDDP-128.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nokia Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HWS_PreliminaryQuote_Expiration_Days__c</fullName>
        <label>Preliminary Quote Expiration Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HWS_Product__c</fullName>
        <formula>HWS_Service_Contract_Line_Item__r.PricebookEntry.Product2.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_QuotationContactEmail__c</fullName>
        <formula>HWS_Quotation_Contact__r.Email</formula>
        <label>Customer Contact 1 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_QuotationContactName__c</fullName>
        <formula>HWS_Quotation_Contact__r.LastName</formula>
        <label>Customer Contact 1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Quotation_Contact_Phone__c</fullName>
        <formula>HWS_Quotation_Contact__r.Phone</formula>
        <label>Customer Contact 1 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Quotation_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Fee_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HWS_Quote_Eligilibilty_Days__c</fullName>
        <label>Quote Eligibility Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HWS_Quote_Expiration_Days__c</fullName>
        <label>Quote Expiration Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HWS_Repacking_HW_PackingDiscount__c</fullName>
        <label>Repacking HW Packing Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HWS_Scope_of_work_Damaged_Parts_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scope of work Damaged Parts id</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HWS_Scope_of_work_Unreturned_Parts_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scope of work Unreturned Parts id</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HWS_Service_Assurance_Manager_Name__c</fullName>
        <formula>HWS_Service_Assurance_Manager__r.Username</formula>
        <label>Escalation Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Service_Assurance_Manager_Phone__c</fullName>
        <formula>IF(ISBLANK(HWS_Service_Assurance_Manager__r.Phone), HWS_Service_Assurance_Manager__r.MobilePhone,HWS_Service_Assurance_Manager__r.Phone)</formula>
        <label>Escalation Manager Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Service_Assurance_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalation Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.ContactId</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>FEE_Discount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HWS_Service_Contract_Line_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Contract Line Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.HWS_Service_Contract__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.HWS_Service_Contract__c</field>
                <operation>equals</operation>
                <valueField>ContractLineItem.ServiceContract.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>Service Fee Discounts</relationshipLabel>
        <relationshipName>FEE_Discount</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HWS_Service_Contract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Contract</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>ServiceContract.RecordType.Name</field>
                <operation>equals</operation>
                <value>CARE Service Contract</value>
            </filterItems>
            <filterItems>
                <field>ServiceContract.NCP_External_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipName>FEE_Discount</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HWS_Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HWS_SupportedQuoteTypes__c</fullName>
        <label>Supported Quote Types</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Damaged Part</fullName>
                </value>
                <value>
                    <fullName>Unreturned Part</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HWS_Suspension_Email_Text__c</fullName>
        <description>This is Created as a Part of HWSDDP-128.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Suspension Email Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HWS_UnSuspension_Email_Text__c</fullName>
        <description>This is Created as a Part of HWSDDP-128.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UnSuspension Email Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HWS_Unreturned_Part_Discount__c</fullName>
        <label>HW Unreturned Part Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Service Fee Discount</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HWS_Service_Contract__c</columns>
        <columns>HWS_Service_Contract_Line_Item__c</columns>
        <columns>HWS_Product__c</columns>
        <columns>HWS_Business_unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Damaged_Part</fullName>
        <columns>NAME</columns>
        <columns>HWS_Service_Contract__c</columns>
        <columns>HWS_Service_Contract_Line_Item__c</columns>
        <columns>HWS_Cares_Service_Agreement_Number__c</columns>
        <columns>HWS_Cares_Line_Item_Number__c</columns>
        <columns>HWS_Product__c</columns>
        <columns>HWS_Service_Assurance_Manager__c</columns>
        <columns>HWS_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>HWS_SupportedQuoteTypes__c</field>
            <operation>equals</operation>
            <value>Damaged Part</value>
        </filters>
        <label>HWS Damaged Part Discount</label>
    </listViews>
    <listViews>
        <fullName>Unreturned_Part</fullName>
        <columns>NAME</columns>
        <columns>HWS_Service_Contract__c</columns>
        <columns>HWS_Service_Contract_Line_Item__c</columns>
        <columns>HWS_Cares_Service_Agreement_Number__c</columns>
        <columns>HWS_Cares_Line_Item_Number__c</columns>
        <columns>HWS_Product__c</columns>
        <columns>HWS_Service_Assurance_Manager__c</columns>
        <columns>HWS_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>HWS_SupportedQuoteTypes__c</field>
            <operation>equals</operation>
            <value>Unreturned Part</value>
        </filters>
        <label>HWS Unreturned Part Discount</label>
    </listViews>
    <nameField>
        <displayFormat>HW-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Fee Discounts</pluralLabel>
    <recordTypes>
        <fullName>HWS_LineItem_Discount</fullName>
        <active>true</active>
        <label>LineItem Discount</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>HWS_ServiceContractLineItem_Update</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(HWS_Service_Contract_Line_Item__c)</errorConditionFormula>
        <errorDisplayField>HWS_Service_Contract_Line_Item__c</errorDisplayField>
        <errorMessage>Service contract line item can not be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HWS_ServiceContract_Update</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(HWS_Service_Contract__c)</errorConditionFormula>
        <errorDisplayField>HWS_Service_Contract__c</errorDisplayField>
        <errorMessage>Service Contract can not be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HWS_ValidateAccountonServiceContract</fullName>
        <active>true</active>
        <description>HWSDDP-66</description>
        <errorConditionFormula>OR(
AND(NOT(ISBLANK(  HWS_Quotation_Contact__c)),
HWS_Quotation_Contact__r.AccountId !=   HWS_Service_Contract__r.Account.Parent.Id),

AND(NOT(ISBLANK(  HWS_Customer_Contact_2__c )),
 HWS_Customer_Contact_2__r.AccountId !=   HWS_Service_Contract__r.Account.Parent.Id))</errorConditionFormula>
        <errorMessage>Customer Contacts should belong to Customer associated with the Legal Entity of Service Contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HWS_ValidateInactiveContacts</fullName>
        <active>true</active>
        <description>HWSDDP-66</description>
        <errorConditionFormula>OR( AND(
NOT(ISBLANK(HWS_Quotation_Contact__c)),ISPICKVAL(  HWS_Quotation_Contact__r.Contact_Status__c,&quot;Inactive&quot;)),
AND(
NOT(ISBLANK( HWS_Customer_Contact_2__c )),ISPICKVAL( HWS_Customer_Contact_2__r.Contact_Status__c,&quot;Inactive&quot;))
)</errorConditionFormula>
        <errorMessage>The selected Customer Contact is Inactive in SRM.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HWS_ValidateNokiaEmail</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK( HWS_Nokia_Email__c )),
NOT(CONTAINS(LOWER($Setup.Nokia_Employee_Email_Domains__c.Nokia_Valid_Domain__c),
&apos;&quot;&apos; &amp; LOWER(TRIM(RIGHT(HWS_Nokia_Email__c, LEN(HWS_Nokia_Email__c) - FIND(&quot;@&quot;, HWS_Nokia_Email__c)))) &amp; &apos;&quot;&apos;
))
)</errorConditionFormula>
        <errorDisplayField>HWS_Nokia_Email__c</errorDisplayField>
        <errorMessage>Nokia Email field must have a valid Nokia Email Domain</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HWS_Validate_AdminDays</fullName>
        <active>false</active>
        <errorConditionFormula>OR(ISNULL(HWS_PreliminaryQuote_Expiration_Days__c),HWS_PreliminaryQuote_Expiration_Days__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>HWS_PreliminaryQuote_Expiration_Days__c</errorDisplayField>
        <errorMessage>Quote days should not be blank and less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HWS_Validate_Discount</fullName>
        <active>true</active>
        <description>HWSDDP-8</description>
        <errorConditionFormula>OR(
AND(INCLUDES (HWS_SupportedQuoteTypes__c, &quot;Damaged Part&quot;), ISBLANK(HWS_Damaged_HW_RepairDiscount__c)),
AND(INCLUDES (HWS_SupportedQuoteTypes__c, &quot;Damaged Part&quot;), ISBLANK(HWS_Damaged_HW_ReplacementDiscount__c)),
AND(INCLUDES (HWS_SupportedQuoteTypes__c, &quot;Damaged Part&quot;), ISBLANK(HWS_Documentation_Discount__c)),
AND(INCLUDES (HWS_SupportedQuoteTypes__c, &quot;Damaged Part&quot;), ISBLANK(HWS_HW_AssessmentDiscount__c)),
AND(INCLUDES (HWS_SupportedQuoteTypes__c, &quot;Damaged Part&quot;), ISBLANK(HWS_HW_ReplacementDiscount__c)),
AND(INCLUDES (HWS_SupportedQuoteTypes__c, &quot;Damaged Part&quot;), ISBLANK(HWS_Repacking_HW_PackingDiscount__c)),
AND(INCLUDES (HWS_SupportedQuoteTypes__c, &quot;Damaged Part&quot;), ISBLANK(HWS_Damaged_HW_RepairDiscount2__c)),
AND(INCLUDES(HWS_SupportedQuoteTypes__c, &quot;Unreturned Part&quot;), ISBLANK(HWS_Unreturned_Part_Discount__c))
				)</errorConditionFormula>
        <errorMessage>If Supported Quote Types is Damaged , please fill all discount except HW Unreturned Part Discount
If Supported Quote Types is Unreturned ,please fill HW Unreturned Part Discount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HWS_Validate_EmailTemplate</fullName>
        <active>true</active>
        <description>This is Created as a Part of HWSDDP-140.</description>
        <errorConditionFormula>ISBLANK( HWS_Email_Template__c )</errorConditionFormula>
        <errorDisplayField>HWS_Email_Template__c</errorDisplayField>
        <errorMessage>Email Template not Specified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HWS_Validate_InactiveUser</fullName>
        <active>true</active>
        <errorConditionFormula>OR(HWS_Service_Assurance_Manager__r.IsActive == False,ISBLANK(HWS_Service_Assurance_Manager__c)  )</errorConditionFormula>
        <errorDisplayField>HWS_Service_Assurance_Manager__c</errorDisplayField>
        <errorMessage>Service Assurance manager can not be inactive and blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HWS_Validate_Parts</fullName>
        <active>true</active>
        <description>HWSDDP-8</description>
        <errorConditionFormula>OR(
INCLUDES (HWS_SupportedQuoteTypes__c, &quot;Unreturned Part&quot;) &amp;&amp; isblank (HWS_Scope_of_work_Unreturned_Parts_id__c),

INCLUDES(HWS_SupportedQuoteTypes__c, &quot;Damaged Part&quot;) &amp;&amp; isblank (HWS_Scope_of_work_Damaged_Parts_id__c)
)</errorConditionFormula>
        <errorMessage>If Supported Quote Types is Damaged , please fill Scope of work Damaged Parts
If Supported Quote Types is Unreturned  ,please fill Scope of work Unreturned Parts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HWS_Validate_QuoteDays</fullName>
        <active>true</active>
        <description>HWSDDP-8</description>
        <errorConditionFormula>OR(
				AND(INCLUDES(HWS_SupportedQuoteTypes__c, &quot;Unreturned Part&quot;),ISBLANK(HWS_Quote_Eligilibilty_Days__c)),
				AND(INCLUDES(HWS_SupportedQuoteTypes__c, &quot;Damaged Part&quot;),ISBLANK(HWS_Quote_Expiration_Days__c)))</errorConditionFormula>
        <errorMessage>If Supported Quote Types is Unreturned , please fill Quote Eligilibilty Days
If Supported Quote Types is Damaged ,please fill Quote Expiration Days</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HWS_Validate_SuspensionEmailText</fullName>
        <active>true</active>
        <description>This is Created as a Part of HWSDDP-128.</description>
        <errorConditionFormula>ISBLANK( HWS_Suspension_Email_Text__c)</errorConditionFormula>
        <errorDisplayField>HWS_Suspension_Email_Text__c</errorDisplayField>
        <errorMessage>Email Template not specified for Suspension</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HWS_Validate_UnSuspensionEmailText</fullName>
        <active>true</active>
        <description>This is Created as a Part of HWSDDP-128.</description>
        <errorConditionFormula>ISBLANK(HWS_UnSuspension_Email_Text__c)</errorConditionFormula>
        <errorDisplayField>HWS_UnSuspension_Email_Text__c</errorDisplayField>
        <errorMessage>Email Template not specified for Unsuspension</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HWS_Validation_Fee_ForPercentage</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
HWS_Damaged_HW_RepairDiscount__c &gt; 1.0,
HWS_Damaged_HW_RepairDiscount__c &lt; 0.0,
HWS_Damaged_HW_RepairDiscount2__c &gt; 1.0,
HWS_Damaged_HW_RepairDiscount2__c &lt; 0.0,
HWS_Damaged_HW_ReplacementDiscount__c &gt; 1.0,
HWS_Damaged_HW_ReplacementDiscount__c &lt; 0.0,
HWS_HW_AssessmentDiscount__c &gt; 1.0,  
HWS_HW_AssessmentDiscount__c &lt; 0.0,
HWS_HW_ReplacementDiscount__c &gt; 1.0,  
HWS_HW_ReplacementDiscount__c &lt; 0.0,
HWS_Unreturned_Part_Discount__c &gt; 1.0,  
HWS_Unreturned_Part_Discount__c &lt; 0.0,
HWS_Repacking_HW_PackingDiscount__c &gt; 1.0,  
HWS_Repacking_HW_PackingDiscount__c &lt; 0.0,
HWS_Documentation_Discount__c &gt; 1.0,
HWS_Documentation_Discount__c &lt; 0.0
)</errorConditionFormula>
        <errorMessage>Discount must be between 0 and 100%.</errorMessage>
    </validationRules>
</CustomObject>